hide nav for now

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav>
+  <nav style="display:none;">
     <ol class="unstyled">
       <li><a href="#" title="Home"><i class="icon-home"></i></a></li>
       <li><a href="#" title="Blog"><i class="icon-edit"></i></a></li>
