Added contact page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,19 +6,23 @@ body {
 }
 nav {
   position:absolute;
-  top:20px;
-  left:820px;
+  top:50px;
+  left:0;
   li {
-    float:left;
-    margin-left: 20px;
+    margin: 30px 0 0 10px;
     a {
       position:relative;
       color:#02103f;
       font-size: 32px;
+      display:block;
+      text-align:center;
+      div {
+        font-size:18px;
+      }
       z-index: 10;
       &:hover{
         text-decoration:none;
-        color:#fff;
+        // color:#fff;
       }
     }
   }
@@ -37,4 +41,14 @@ section {
     margin-left: 600px;
     padding-top: 200px;
   }
+}
+
+.page {
+  margin:10px 0 0 100px;
+  min-height:400px;
+}
+
+footer {
+  color:#ccc;
+  text-align:center;
 }
