--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,9 @@
-<%= image_tag 'logo.gif' %>
+<section>
+<%= image_tag 'big_robot.gif' %>
 <p class="lead">
   Tiny Robot Army is the Consulting, Contracting and Freelancing business of Adam Boas. I am available to build
-  web applications, contract on existing projects or consult on development practices and team productivity. I have a
-  long history in Web Application Development; initially in PHP, .NET and Java EE and over the past few years 
-  focussing on Ruby and Rails.
+  web applications, contract on existing projects or consult around software development, team management and 
+  productivity. I have a long history in Web Application Development; initially in PHP, .NET and Java EE and over
+   the past few years focussing on Ruby and Rails.
 </p>
+</section>
