--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= image_tag 'logo.png', alt: 'Tiny Robot Army' %>
   <nav>
     <ol class="unstyled">
       <li>
@@ -21,17 +22,23 @@
           <div>Contact</div>
         </a>
       </li>
-      <li style="display:none;">
-        <a href="#" title="Blog">
-          <i class="icon-edit"></i>
+      <li>
+        <a href="/posts" title="Blog">
+          <i class="icon-rss"></i>
           <div>Blog</div>
         </a>
       </li>
     </ol>
   </nav>
-<%= yield %>
+  <%= message_box(yield(:message_box)) %>
+  <%= yield %>
 <footer>
   &copy; 2011 - 2012 Tiny Robot Army
 </footer>
+<script type="text/javascript">
+  $(document).ready(function(){
+    <%= yield(:dom_ready) %>
+  });
+</script>
 </body>
 </html>
