toggled blog off for now

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
           <div>Contact</div>
         </a>
       </li>
-      <li>
+      <li style="display:none;">
         <a href="/posts" title="Blog">
           <i class="icon-rss"></i>
           <div>Blog</div>
