removed post and comment partials as they have very different display logic depending on where they are rendered

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,19 +1,20 @@
 
-<%= link_to t('.new_post'), new_post_path %>
+<%# link_to t('.new_post'), new_post_path %>
 <ul id="posts" class="unstyled entries">
 <% @posts.each do |post| %>
   <li>
-    <%= render partial: 'post', locals: { post: post } %>
+    <h2><%= link_to post.subject, post_path(post) %></h2>
+    <p>
+      <%= raw post.body %>
+    </p>
+    <div class="footer">
+      <span class="posted">
+        <%= t '.author', {author: post.author.first_name, ago: time_ago_in_words(post.created_at)} %>
+      </span>
+      <div class="comments">
+        <i class="icon-comments"></i> <span class="count"><%= t('.comments', count: post.comments.size) %></span>
+      </div>
+    </div>
   </li>
 <% end -%>
 </ul>
-<%= content_for :dom_ready do %>
-  $('#posts>li').each(function(){
-      var el = $(this);
-      el.find('form').slideoutForm({list: el.find('ul.comments'), control:el.find('.add-comment'), cancel:el.find('.cancel')});
-    }).bind('newItem', function(event, item) {
-      var countElement = $(item).parents('.contained').find('.count');
-      var currentCount = parseInt(countElement.html());
-      countElement.html((currentCount + 1) + (currentCount == 0 ? ' Comment' : ' Comments'));
-    });
-<% end -%>
