--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,4 +1,1 @@
-<li>
-  <h4><%= @comment.author.full_name %></h4>
-  <%= @comment.body %>
-</li>
+<%= render partial: 'shared/comment', locals: { comment: @comment } %>
