cleaned up comment rendering a little, comments are now listed from newest to oldest and new comments put directly below the add comment button

--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -7,12 +7,7 @@
     border-left: #ccc 1px solid;
     margin: 0 0 20px 0;
     padding-left: 20px;
-    h2 {
-      text-align:left;
-      text-transform: uppercase;
-      font-size: 24px;
-      margin:0;
-    }
+    
     h4 {
       margin: 0;
     }
@@ -24,7 +19,7 @@
       }
     }
     .footer{
-      background-color: #f8f8f8;
+      background-color: $light_grey;
       font-size: smaller;
       padding: 5px 10px;
       margin:0;
@@ -54,4 +49,24 @@ form {
 }
 textarea, input {
   width:80%;
+}
+
+ul.comments {
+  margin-left: 20px;
+  background-color: $light_grey;
+
+  li {
+    margin-bottom: 10px;
+    padding:5px;
+
+    &.comment {
+      background-color: #fff;
+      border: solid 1px #ccc;
+      margin:0 5px 10px 5px;
+      div.posted {
+        margin-top: 10px;
+        color: #ccc;
+      }
+    }
+  }
 }
