--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 $base_text_colour:#00413d;
 $error_colour:#c1272d;
 $notice_colour:#336600;
+$light_grey: #f8f8f8;
 
 @import 'bootstrap';
 @import "font-awesome";
@@ -34,6 +35,13 @@ nav {
       }
     }
   }
+}
+
+h2 {
+  text-align:left;
+  text-transform: uppercase;
+  font-size: 24px;
+  margin:0;
 }
 
 p {
