Added admin field to user for access to the admin area and moved posting into the admin area

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,12 @@
           <div>Blog</div>
         </a>
       </li>
+      <li>
+        <a href="/admin/posts/new" title="Blog">
+          <i class="icon-edit"></i>
+          <div>Post</div>
+        </a>
+      </li>
     </ol>
   </nav>
   <%= message_box(yield(:message_box)) %>
