--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,13 +1,16 @@
+
 $base_text_colour:#00413d;
 $error_colour:#c1272d;
 $notice_colour:#336600;
 $light_grey: #f8f8f8;
 $grey: #ccc;
 
-@import 'bootstrap';
+@import "compass/css3/transition";
+@import "bootstrap";
 @import "font-awesome";
 @import "message_box";
 @import "posts";
+@import "dropzone";
 
 body {
   position:relative;
