--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -17,6 +17,8 @@
           = link_to raw(posts_link_label), admin_posts_path
         %li
           = link_to raw(categories_link_label), admin_categories_path
+        %li
+          = link_to raw(images_link_label), admin_images_path
 
     = message_box(yield(:message_box))
     = yield
