Removed nicEdit and moved to bootstrap wysiwyg

--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -1,4 +1,3 @@
-
 .entries {
   margin: 0;
   padding: 0.5em 0.25em;
@@ -45,11 +44,11 @@ abbr[title] {
 }
 
 form {
-  width:800px;
+  width:820px;
 }
-textarea, input {
-  width:80%;
-}
+// textarea, input {
+//   width:80%;
+// }
 
 ul.comments {
   background-color: $light_grey;
