--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,14 +1,15 @@
+//= require bootstrap.min
 
 $base_text_colour:#00413d;
 $error_colour:#c1272d;
 $notice_colour:#336600;
 $light_grey: #f8f8f8;
 $grey: #ccc;
+$green:#090;
 
 @import "compass/css3/transition";
 @import "compass/css3/border-radius";
 @import "compass/css3/box-shadow";
-@import "bootstrap";
 @import "font-awesome";
 @import "message_box";
 @import "posts";
