--- a/app/views/admin/images/index.html.haml
+++ b/app/views/admin/images/index.html.haml
@@ -1,9 +1,9 @@
-%ul.unstyled
-  - @images.each_slice(3) do |images_row|
-    %li
-      %ul.thumbnails
-        - images_row.each do |image|
-          %li.span2
-            %a.thumbnail{href: '#'}
-              = image_tag image.file.thumb.url
-
+= simple_form_for [:admin, Image.new], html: {class: 'dropzone'} do |f|
+  = f.input :file, as: :file, wrapper_html: {class: 'fallback'}
+.container
+  - @images.each_slice(4) do |images_row|
+    .row
+      - images_row.each do |image|
+        .col-lg-3
+          %a.thumbnail{href: '#'}
+            = image_tag image.file.thumb.url
