--- a/app/views/admin/posts/_wysiwyg_toolbar.html.haml
+++ b/app/views/admin/posts/_wysiwyg_toolbar.html.haml
@@ -1,11 +1,11 @@
-.btn-toolbar{"data-role" => "editor-toolbar", "data-target" => "#post_body_editor"}
+.btn-toolbar.before-editable{"data-role" => "editor-toolbar", "data-target" => "#post_body_editor"}
   .btn-group
-    %a.btn.dropdown-toggle{"data-toggle" => "dropdown", :title => "Font"}
+    %a.btn.btn-default.dropdown-toggle{"data-toggle" => "dropdown", :title => "Font"}
       %i.icon-font
       %b.caret
     %ul.dropdown-menu
   .btn-group
-    %a.btn.dropdown-toggle{"data-toggle" => "dropdown", :title => "Font Size"}
+    %a.btn.btn-default.dropdown-toggle{"data-toggle" => "dropdown", :title => "Font Size"}
       %i.icon-text-height>
       \ 
       %b.caret
@@ -20,47 +20,47 @@
         %a{"data-edit" => "fontSize 1"}
           %font{:size => "1"} Small
   .btn-group
-    %a.btn{"data-edit" => "bold", :title => "Bold (Ctrl/Cmd+B)"}
+    %a.btn.btn-default{"data-edit" => "bold", :title => "Bold (Ctrl/Cmd+B)"}
       %i.icon-bold
-    %a.btn{"data-edit" => "italic", :title => "Italic (Ctrl/Cmd+I)"}
+    %a.btn.btn-default{"data-edit" => "italic", :title => "Italic (Ctrl/Cmd+I)"}
       %i.icon-italic
-    %a.btn{"data-edit" => "strikethrough", :title => "Strikethrough"}
+    %a.btn.btn-default{"data-edit" => "strikethrough", :title => "Strikethrough"}
       %i.icon-strikethrough
-    %a.btn{"data-edit" => "underline", :title => "Underline (Ctrl/Cmd+U)"}
+    %a.btn.btn-default{"data-edit" => "underline", :title => "Underline (Ctrl/Cmd+U)"}
       %i.icon-underline
   .btn-group
-    %a.btn{"data-edit" => "insertunorderedlist", :title => "Bullet list"}
+    %a.btn.btn-default{"data-edit" => "insertunorderedlist", :title => "Bullet list"}
       %i.icon-list-ul
-    %a.btn{"data-edit" => "insertorderedlist", :title => "Number list"}
+    %a.btn.btn-default{"data-edit" => "insertorderedlist", :title => "Number list"}
       %i.icon-list-ol
-    %a.btn{"data-edit" => "outdent", :title => "Reduce indent (Shift+Tab)"}
+    %a.btn.btn-default{"data-edit" => "outdent", :title => "Reduce indent (Shift+Tab)"}
       %i.icon-indent-left
-    %a.btn{"data-edit" => "indent", :title => "Indent (Tab)"}
+    %a.btn.btn-default{"data-edit" => "indent", :title => "Indent (Tab)"}
       %i.icon-indent-right
   .btn-group
-    %a.btn{"data-edit" => "justifyleft", :title => "Align Left (Ctrl/Cmd+L)"}
+    %a.btn.btn-default{"data-edit" => "justifyleft", :title => "Align Left (Ctrl/Cmd+L)"}
       %i.icon-align-left
-    %a.btn{"data-edit" => "justifycenter", :title => "Center (Ctrl/Cmd+E)"}
+    %a.btn.btn-default{"data-edit" => "justifycenter", :title => "Center (Ctrl/Cmd+E)"}
       %i.icon-align-center
-    %a.btn{"data-edit" => "justifyright", :title => "Align Right (Ctrl/Cmd+R)"}
+    %a.btn.btn-default{"data-edit" => "justifyright", :title => "Align Right (Ctrl/Cmd+R)"}
       %i.icon-align-right
-    %a.btn{"data-edit" => "justifyfull", :title => "Justify (Ctrl/Cmd+J)"}
+    %a.btn.btn-default{"data-edit" => "justifyfull", :title => "Justify (Ctrl/Cmd+J)"}
       %i.icon-align-justify
   .btn-group
-    %a.btn.dropdown-toggle{"data-toggle" => "dropdown", :title => "Hyperlink"}
+    %a.btn.btn-default{"data-toggle" => "dropdown", :title => "Hyperlink"}
       %i.icon-link
     .dropdown-menu.input-append
       %input.span2{"data-edit" => "createLink", :placeholder => "URL", :type => "text"}/
       %button.btn{:type => "button"} Add
-    %a.btn{"data-edit" => "unlink", :title => "Remove Hyperlink"}
+    %a.btn.btn-default{"data-edit" => "unlink", :title => "Remove Hyperlink"}
       %i.icon-cut
   .btn-group
-    %a#pictureBtn.btn.dropdown-toggle{title: "Insert picture", href: '/admin/images', "data-edit" => "insertImage", "data-toggle" => "modal", "data-target" => "#image_modal"}
+    %a#pictureBtn.btn.btn-default{title: "Insert picture", href: '/admin/images', "data-edit" => "insertImage", "data-toggle" => "modal", "data-target" => "#image_modal"}
       %i.icon-picture
   .btn-group
-    %a.btn{"data-edit" => "undo", :title => "Undo (Ctrl/Cmd+Z)"}
+    %a.btn.btn-default{"data-edit" => "undo", :title => "Undo (Ctrl/Cmd+Z)"}
       %i.icon-undo
-    %a.btn{"data-edit" => "redo", :title => "Redo (Ctrl/Cmd+Y)"}
+    %a.btn.btn-default{"data-edit" => "redo", :title => "Redo (Ctrl/Cmd+Y)"}
       %i.icon-repeat
   %input#voiceBtn{"data-edit" => "inserttext", :type => "text", "x-webkit-speech" => ""}/
 #image_modal.modal.hide.fade{tabindex: "-1", role: "dialog", "aria-labelledby" => "myModalLabel", "aria-hidden" => "true"}
