--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -1,100 +1,67 @@
-.entries {
-  margin: 0;
-  padding: 0.5em 0.25em;
-  width:800px;
-  >li {
-    border-left: $grey 1px solid;
-    margin: 0 0 20px 0;
-    padding-left: 20px;
-
-    h4 {
-      margin: 0;
-    }
-    p {
-      overflow:auto;
-      margin-left:0;
-      img {
-        padding:5px;
-      }
-    }
-    .footer{
-      background-color: $light_grey;
-      font-size: smaller;
-      padding: 5px 10px;
-      margin:0;
-      .posted {
-        line-height:30px;
-      }
-      .comments {
-        float:right;
-        color:$green;
-        font-size:14px;
-        line-height:30px;
-        a {
-          margin-left:10px;
-        }
-      }
+.blog {
+  ul.blog-entries {
+    li {
+      margin: 1em 0 3em 0;
     }
   }
-}
-
-abbr[title] {
-  color: $error_colour;
-  border: 0;
-}
-
-form {
-  width:820px;
-}
-// textarea, input {
-//   width:80%;
-// }
-
-ul.comments {
-  background-color: $light_grey;
-
-  li {
-    margin-bottom: 10px;
-    padding:5px;
-
-    &.comment {
-      background-color: #fff;
-      border: solid 1px $grey;
-      margin:0 5px 10px 5px;
-      div.posted {
-        margin-top: 10px;
-        color: $grey;
-      }
-    }
-  }
-}
-
-.post {
-  width: 800px;
   h2 {
-    background-color: $light_grey;
-    border-bottom: 1px solid $grey;
-    padding-left: 10px;
+    padding: 0.25em;
+    color: #999;
+    border-bottom: 6px solid $primary_colour;
     a {
-      margin-right: 10px;
+      color: #999;
+    }
+    .subject {
+      margin: -0.7em 0 0.3em 2.5em;
+      line-height: 1.5em;
+    }
+    .small {
+      font-size: 35%;
+      padding-bottom: 0.25em;
+      color: $primary_colour;
+      margin-left: 7.5em;
+    }
+    .date {
+      color: #999 ;
+      text-align: center;
+      padding: 0.1em 0.5em;
+      margin: -0.45em 0 0 -0.25em;
+      background-color: #fff;
+      border: 1px solid $light_grey;
+      box-shadow: 2px 2px 8px $grey;
+      .month{
+        font-size: 35%;
+      }
+      .year {
+        font-size: 35%;
+      }
     }
   }
-  p {
-    padding-left:10px;
-  }
-  .back {
-    margin-left:10px;
-    line-height: 25px;
-    i {
-      padding-right: 10px;
+
+  h3 {
+    border-bottom: 6px solid #999;
+    line-height: 1.5em;
+    &.categories {
+      border:0;
     }
   }
-}
 
-.after-editable {
-  margin-top: 1em;
-}
+  h4 {
+    font-size: 30px;
+    color: #999;
+    text-align: center;
+    margin-top: 1em;
+  }
 
-.before-editable {
-  margin-bottom: 0.5em;
+  ul.categories a {
+    &.active {
+      color: darken( $primary_colour, 10%)
+    }
+    color: #999;
+    line-height: 2em;
+  }
+
+  .search {
+    margin-top: 2em;
+  }
 }
