--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@ $green:#090;
 @import "compass/css3/transition";
 @import "compass/css3/border-radius";
 @import "compass/css3/box-shadow";
+@import "bootstrap_overrides";
 @import "font-awesome";
 @import "message_box";
 @import "posts";
