--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,10 +1,16 @@
-%h2 Sign up
-= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
-  = f.error_notification
-  .form-inputs
-    = f.input :email, :required => true, :autofocus => true
-    = f.input :password, :required => true
-    = f.input :password_confirmation, :required => true
-  .form-actions
-    = f.button :submit, "Sign up", class: 'btn btn-primary'
-= render "devise/shared/links"
+.row
+  .col-md-2
+  .col-md-8
+    %h2 Sign up
+    = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = f.error_notification
+      .form-inputs
+        = f.input :email, required: true, autofocus: true
+        = f.input :first_name, required: true
+        = f.input :last_name, required: true
+        = f.input :password, required: true
+        = f.input :password_confirmation, required: true
+      .form-actions
+        = f.button :submit, "Sign up", class: 'btn btn-primary'
+    = render "devise/shared/links"
+  .col-md-2
