--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,11 +10,11 @@
     %nav
       %ol.unstyled
         %li
-          = link_to home_link_label, '/'
+          = link_to icon_link_label('icon-home', t('.home')), '/'
         %li
-          = link_to contact_link_label, '/contact'
+          = link_to icon_link_label('icon-envelope', t('.contact_us')), '/contact'
         %li
-          = link_to blog_link_label, blog_path
+          = link_to icon_link_label('icon-rss', t('.blog')), blog_path
         %li
           = sign_in_out current_user
         %li
