--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,29 +1,12 @@
-.post
-  = link_to raw( '<i class="icon-caret-left"></i>' + t('.back')), posts_path, class: 'back'
-  %h2
-    = @post.subject
-    = link_to raw('<i class="icon-edit"></i>'), edit_admin_post_path(@post), class: 'pull-right' if current_user && current_user.admin?
-  %p
-    = raw @post.body
-  %ul.comments.unstyled
-    %li.count
-      %i.icon-comments
-      %span.count= t('.comments', count: @post.comments.size)
-      = link_to(raw(t('.comment')), '#', class: 'btn btn-success add-comment pull-right')
-    - if allow_comments
-      %li.form
-        = simple_form_for @new_comment, url: post_comments_path(@post), html: {class: 'hidden'} do |comment_form|
-          = comment_form.input :body, label: t('.body'), input_html: {rows: 5}
-          .actions
-            = comment_form.button :submit, class: 'btn btn-success'
-            = link_to t('.cancel'), '#', class: 'btn cancel'
-    - @post.comments.each do |comment|
-      = render partial: 'shared/comment', locals: { comment: comment }
-= content_for :dom_ready do
-  $('form').slideoutForm({list: $('ul.comments'),
-  control: $('.add-comment'),
-  cancel: $('.cancel')}).bind('newItem', function(event, item) {
-  var countElement = $(item).parents('.contained').find('.count');
-  var currentCount = parseInt(countElement.html());
-  countElement.html((currentCount + 1) + (currentCount == 0 ? ' Comment' : ' Comments'));
-  });
+.row.blog
+  .col-md-1
+  .col-md-10
+    %h2
+      .pull-left.date
+        .day= @post.created_at.day
+        .month= @post.created_at.strftime('%B').upcase
+        .year= @post.created_at.year
+      .subject=@post.subject
+      .small= "BY #{@post.author.full_name.upcase}"
+    %p= raw @post.body
+  .col-md-1
