Cleaned up formatting a little in theadmin area

--- a/app/views/admin/categories/edit.html.haml
+++ b/app/views/admin/categories/edit.html.haml
@@ -1,3 +1,7 @@
-%h1 Editing category
+.row
+  .col-md-1
+  .col-md-10
+    %h1 Editing category
 
-= render partial: 'form', locals: { category: @category }
+    = render partial: 'form', locals: { category: @category }
+  .col-md-1
