--- a/app/views/admin/categories/index.html.haml
+++ b/app/views/admin/categories/index.html.haml
@@ -1,24 +1,27 @@
-%h1 Listing categories
+.row
+  .col-md-1
+  .col-md-10
+    %h1
+      Categories
+      %small.pull-right
+        = link_to 'Create', new_admin_category_path, class: 'btn btn-primary'
 
-%table.table.table-striped
-  %thead
-    %tr
-      %th Name
-      %th Slug
-      %th Description
-      %th Posts
-      %th
-  %tbody
-    - @categories.each do |category|
-      %tr
-        %td= category.title
-        %td= link_to category.slug, admin_category_path(category)
-        %td= truncate(category.description, length: 20)
-        %td= category.posts.count
-        %td
-          = link_to raw('<i class="icon-edit"></i>'), edit_admin_category_path(category)
-          = link_to raw('<i class="icon-trash"></i>'), admin_category_path(category), :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
-
-= link_to 'New Category', new_admin_category_path
+    %table.table.table-striped
+      %thead
+        %tr
+          %th Name
+          %th Slug
+          %th Description
+          %th Posts
+          %th
+      %tbody
+        - @categories.each do |category|
+          %tr
+            %td= category.title
+            %td= link_to category.slug, admin_category_path(category)
+            %td= truncate(category.description, length: 20)
+            %td= category.posts.count
+            %td
+              = link_to raw('<i class="icon-edit"></i>'), edit_admin_category_path(category)
+              = link_to raw('<i class="icon-trash"></i>'), admin_category_path(category), :method => :delete, :data => { :confirm => 'Are you sure?' }
+  .col-md-1
