--- a/app/views/admin/categories/new.html.haml
+++ b/app/views/admin/categories/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New category
+.row
+  c
+  .col-md-10
+    %h1 New category
 
-= render partial: 'form' , locals: { category: @category }
-
-= link_to 'Back', admin_categories_path
+    = render partial: 'form' , locals: { category: @category }
+  .col-md-1
