--- a/app/views/admin/categories/show.html.haml
+++ b/app/views/admin/categories/show.html.haml
@@ -1,14 +1,18 @@
-= content_for :message_box do
-  = notice
+.row
+  .col-md-1
+  .col-md-10
+    = content_for :message_box do
+      = notice
 
-%dl.dl-horizontal
-  %dt Name
-  %dd= @category.title
-  %dt Slug
-  %dd= @category.slug
-  %dt Description
-  %dd= @category.description
+    %dl.dl-horizontal
+      %dt Name
+      %dd= @category.title
+      %dt Slug
+      %dd= @category.slug
+      %dt Description
+      %dd= @category.description
 
-= link_to 'Edit', edit_admin_category_path(@category)
-\|
-= link_to 'Back', admin_categories_path
+    = link_to 'Edit', edit_admin_category_path(@category)
+    \|
+    = link_to 'Back', admin_categories_path
+  .col-md-1
