--- a/app/views/admin/posts/new.html.haml
+++ b/app/views/admin/posts/new.html.haml
@@ -1,1 +1,5 @@
-= render partial: 'form', locals: { post: @post }
+.row
+  .col-md-1
+  .col-md-10
+    = render partial: 'form', locals: { post: @post }
+  .col-md-1
