--- a/app/views/admin/images/new.html.haml
+++ b/app/views/admin/images/new.html.haml
@@ -1,2 +1,6 @@
-= simple_form_for [:admin, @image], html: {class: 'dropzone'} do |f|
-  %caption
+.row
+  .col-md-1
+  .col-md-10
+    = simple_form_for [:admin, @image], html: {class: 'dropzone'} do |f|
+      %caption
+  .col-md-1
